
  Users side :
  ------------
    # A detail-view for RelationType has been created; an interesting feature is
      the display of all entities linked by the concerned type, mixing all entity types.
    # The management of recent entities has been rework. They are now stored in their own table
      (their were stored in the user's session) & so their are shared between the different
      sessions of a user. The setting value 'MAX_LAST_ITEMS' has been removed ;
      use the new values 'LAST_ENTITIES_SIZE' & 'LAST_ENTITIES_MENU_SIZE' instead.
    # Apps :
        * Creme_config :
            - The regular Users can now have several roles. Only one role is active (to compute
              the current permissions), but they can switch their current role to another one.
            - The Users store now the date of their deactivation.
            - The Roles get a new permission: listable models
              (i.e. it allows you to access the list-views of a model).
              The existing roles are migrated to keep the old behaviour: they get
              list permissions for all models belonging to allowed apps.
            - The Roles can now have special permissions.
              Two special permissions have been introduced : "User management" & "Role configuration".
            - The Roles can now be disabled.
        * Billing :
            - Invoices, Quotes & Sales Order got a "card" hat-block, which is used by default by new installations.
            - You can now export several Invoices or Quotes at once, as a .zip archive.

  Developers side :
  -----------------
    - The version of 'QUnit' is now '2.24.1'.
      If you have implemented some javascript unit tests, you should probably read the upgrade guide to QUnit 2.x :
       - https://qunitjs.com/upgrade-guide-2.x/

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The context processor "creme_core.context_processors.get_entities_deletion_allowed"