@@ -6,8 +6,10 @@
       the display of all entities linked by the concerned type, mixing all entity types.
     # The management of recent entities has been rework. They are now stored in their own table
       (their were stored in the user's session) & so their are shared between the different
-      sessions of a user. The setting value 'MAX_LAST_ITEMS' has been removed ;
+      sessions of a user. The setting value 'MAX_LAST_ITEMS' has been removed;
       use the new values 'LAST_ENTITIES_SIZE' & 'LAST_ENTITIES_MENU_SIZE' instead.
+      A block "Recent entities" is now available for Home; it displays more
+      entities than the menu entry.
     # Apps :
         * Creme_config :
             - The regular Users can now have several roles. Only one role is active (to compute
